fix(agent): route shopping requests through available tools